--- a/voxns/index.html
+++ b/voxns/index.html
@@ -29,7 +29,7 @@
         <a class="social" href="https://twitter.com/voxns"><i class="fab fa-twitter fa-fw"></i></a>
         <a class="social" href="https://www.linkedin.com/company/vox-network-solutions"><i class="fab fa-linkedin fa-fw"></i></a>
       -->
-        <a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a>
+        <a class="btn call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a>
       </div>
     </div>
   </nav>
@@ -121,7 +121,7 @@
         </div>
       </div>
       <div class="row">
-          <p class="mt-4 mb-0 mx-auto"><button type="submit" class="btn btn-warning">Talk to a VOX Expert Today!</button></p>
+          <p class="mt-4 mb-0 mx-auto"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p>
         </div>
       </div>
     </div>
@@ -145,7 +145,7 @@
           <p>We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p>Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
           <p>Webex Calling connects directly to broader Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), and to third-party PBXs.</p>
-          <p class="mt-5 mb-5"><button type="submit" class="btn btn-warning">Talk to a VOX Expert Today!</button></p>
+          <p class="mt-5 mb-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p>
         </div>
         <div class="mt-4 col-12 mb-3">
           <h3 class="hr"><span>Why Choose VOX?</span></h3>
@@ -180,7 +180,7 @@
         <div class="col-md-8 col-sm-12">
           <h3 class="light mb-4">What Our Customers Say About&nbsp;Us</h3>
           <p>“Cindy from VOX spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … VOX is lucky to have Cindy on their team!” —Ian Gwinn, UCSF</p>
-          <p class="mt-5"><button type="submit" class="btn btn-warning">Talk to a VOX Expert Today!</button></p>
+          <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p>
         </div>
       </div>
     </div>
