--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -45,16 +45,21 @@
     </div>
   </header>
 
-  <section style="padding: 2rem 1rem 4rem">
+  <section style="padding: 2.5rem 1rem">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-9">
+        <div class="col-12 col-md-8">
           <h4>Has the pandemic and the focus on the remote worker uncovered gaps in your Unified Communications&nbsp;approach?</h4>
           <p>Please join us for a business discussion on Unified Communications and how our recent reliance on UC solutions has uncovered clear gaps in our technology priorities, strategies, tools. This webinar will be led by Nick Kolintzas, CTO, VOX Network Solutions. Mr. Kolintzas is a technology industry visionary and thought leader with over 20 years of experience helping business clients understand forward-looking technologies and how they apply to evolving business&nbsp;scenarios.</p>
         </div>
-        <div class="col-12 col-md-6">
-          <h4 class="mt-4">When</h4>
-          <p class="lead">Tuesday, May 26, 2020<br>11:00 AM – Noon Pacific</p>
+        <div class="col-md-4">
+          <img src="img/nick.jpg" style="max-width:17rem;width:100%;margin-bottom:1rem;border-radius:0.5rem">
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-12 col-md-6 hide-sm">
+          <h4>When</h4>
+          <p class="lead">Tuesday, May 26, 2020<br>11:00–12:00 AM Pacific</p>
           <h4 class="mt-4">Agenda</h4>
           <ul>
             <li>Welcome &amp; Introductions</li>
@@ -92,7 +97,7 @@
               <label for="inputPhone">Phone Number</label>
               <input type="tel" class="form-control" id="inputPhone" placeholder="___–___–____" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
             </div>
-            <button type="submit" class="btn btn-lg btn-warning mt-2">Submit</button>
+            <button type="submit" class="btn btn-block btn-warning mt-4">Submit</button>
           </form>
         </div>
       </div>
