--- a/voxns/index.html
+++ b/voxns/index.html
@@ -20,17 +20,16 @@
 
 <body>
 
-  <nav class="navbar navbar-light static-top">
+  <nav class="navbar navbar-light fixed-top">
     <div class="container">
       <div class="navbar-brand">VOX Network Solutions</div>
-      <div class="contact">
-        <!--
-        <a class="social" href="https://www.youtube.com/user/voxns"><i class="fab fa-youtube a-fw"></i></a>
-        <a class="social" href="https://twitter.com/voxns"><i class="fab fa-twitter fa-fw"></i></a>
-        <a class="social" href="https://www.linkedin.com/company/vox-network-solutions"><i class="fab fa-linkedin fa-fw"></i></a>
-      -->
-        <a class="btn call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a>
-      </div>
+      <div class="contact"><a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a></div>
+    </div>
+  </nav>
+  <nav class="navbar static-top">
+    <div class="container">
+      <div class="navbar-brand">VOX Network Solutions</div>
+      <div class="contact"><a class="btn btn-warning call" href="#"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a></div>
     </div>
   </nav>
 
