sticky, not fixed

--- a/voxns/index.html
+++ b/voxns/index.html
@@ -20,16 +20,10 @@
 
 <body>
 
-  <nav class="navbar navbar-light fixed-top">
+  <nav class="navbar navbar-light sticky-top">
     <div class="container">
       <div class="navbar-brand">VOX Network Solutions</div>
       <div class="contact"><a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a></div>
-    </div>
-  </nav>
-  <nav class="navbar static-top">
-    <div class="container">
-      <div class="navbar-brand">VOX Network Solutions</div>
-      <div class="contact"><a class="btn btn-warning call" href="#"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a></div>
     </div>
   </nav>
 
