--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -32,21 +32,21 @@
       <div class="row">
         <div class="col-12 col-md-9">
           <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
-          <h2 class="mt-3">Webinar<span class="light"> // Rethinking Unified Communications from Our “New Normal”&nbsp;Experiences</span></h2>
+          <h3 class="mt-3">Webinar<span class="light"> // Rethinking Unified Communications from Our “New Normal” Experiences</span></h3>
         </div>
       </div>
     </div>
   </header>
 
-  <section style="padding: 2.5rem 1rem">
+  <section style="padding: 3rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-8">
-          <h4>Has the pandemic and the focus on the remote worker uncovered gaps in your Unified Communications&nbsp;approach?</h4>
+          <h5 class="mb-3">Has the pandemic and the focus on the remote worker uncovered gaps in your Unified Communications approach?</h5>
           <p>Please join us for a business discussion on Unified Communications and how our recent reliance on UC solutions has uncovered clear gaps in our technology priorities, strategies, tools. This webinar will be led by Nick Kolintzas, CTO, VOX Network Solutions. Mr. Kolintzas is a technology industry visionary and thought leader with over 20 years of experience helping business clients understand forward-looking technologies and how they apply to evolving business&nbsp;scenarios.</p>
         </div>
         <div class="col-md-4">
-          <img src="img/nick.jpg" style="max-width:17rem;width:100%;margin-bottom:1rem;border-radius:0.5rem">
+          <img src="img/nick.jpg" style="max-width:15rem;width:100%;margin-bottom:1rem;border-radius:0.5rem">
         </div>
       </div>
       <div class="row mt-4">
