--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -38,7 +38,7 @@
     </div>
   </header>
 
-  <section style="padding: 3rem 1rem">
+  <section class="ceiling-bg" style="padding: 3rem 1rem 6rem">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-8">
@@ -69,7 +69,7 @@
           </ul>
         </div>
         <div class="col-12 col-md-6">
-          <form>
+          <form id="webinarForm">
             <div class="form-group">
               <label for="inputFirst">First Name <small>(required)</small></label>
               <input type="text" class="form-control" id="inputFirst" required>
