--- a/voxns/index.html
+++ b/voxns/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="row">
-          <p class="mt-4 mb-0 mx-auto"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p>
+          <p class="mt-4 mb-0 mx-auto"><a href="#connect" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</a></p>
         </div>
       </div>
     </div>
@@ -138,7 +138,7 @@
           <p>We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p>Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
           <p>Webex Calling connects directly to broader Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), and to third-party PBXs.</p>
-          <p class="mt-5 mb-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p>
+          <p class="mt-5 mb-5"><a href="#connect" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</a></p>
         </div>
         <div class="mt-4 col-12 mb-3">
           <h3 class="hr"><span>Why Choose VOX?</span></h3>
@@ -173,7 +173,43 @@
         <div class="col-md-8 col-sm-12">
           <h3 class="light mb-4">What Our Customers Say About&nbsp;Us</h3>
           <p>“Cindy from VOX spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … VOX is lucky to have Cindy on their team!” —Ian Gwinn, UCSF</p>
-          <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p>
+          <!-- <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p> -->
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="connect" class="ceiling-bg" style="padding: 6rem 1rem">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6 hide-sm">
+          <h3>Connect with a VOX Expert</h3>
+          <p class="lead">We can help you strategize and execute your Cloud Migration.</p>
+        </div>
+        <div class="col-12 col-md-6">
+          <form id="connectForm">
+            <div class="form-group">
+              <label for="inputFirst">First Name <small>(required)</small></label>
+              <input type="text" class="form-control" id="inputFirst" required>
+            </div>
+            <div class="form-group">
+              <label for="inputLast">Last Name <small>(required)</small></label>
+              <input type="text" class="form-control" id="inputLast" required>
+            </div>
+            <div class="form-group">
+              <label for="inputEmail">Email <small>(required)</small></label>
+              <input type="email" class="form-control" id="inputEmail" required>
+            </div>
+            <div class="form-group">
+              <label for="inputCompany">Company <small>(required)</small></label>
+              <input type="text" class="form-control" id="inputCompany" required>
+            </div>
+            <div class="form-group">
+              <label for="inputPhone">Phone Number</label>
+              <input type="tel" class="form-control" id="inputPhone" placeholder="___–___–____" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+            </div>
+            <button type="submit" class="btn btn-block btn-warning mt-4">Submit</button>
+          </form>
         </div>
       </div>
     </div>
