--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -38,22 +38,13 @@
     </div>
   </header>
 
-  <section class="ceiling-bg" style="padding: 3rem 1rem 6rem">
+  <section class="ceiling-bg" style="padding: 3em 1rem 6rem">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-8">
-          <h5 class="mb-3">Has the pandemic and the focus on the remote worker uncovered gaps in your Unified Communications approach?</h5>
-          <p>Please join us for a business discussion on Unified Communications and how our recent reliance on UC solutions has uncovered clear gaps in our technology priorities, strategies, tools. This webinar will be led by Nick Kolintzas, CTO, VOX Network Solutions. Mr. Kolintzas is a technology industry visionary and thought leader with over 20 years of experience helping business clients understand forward-looking technologies and how they apply to evolving business&nbsp;scenarios.</p>
-        </div>
-        <div class="col-md-4">
-          <img src="img/nick.jpg" style="max-width:15rem;width:100%;margin-bottom:1rem;border-radius:0.5rem">
-        </div>
-      </div>
-      <div class="row mt-4">
         <div class="col-12 col-md-6 hide-sm">
-          <h4>When</h4>
-          <p class="lead">Tuesday, May 26, 2020<br>11:00–12:00 AM Pacific</p>
-          <h4 class="mt-4">Agenda</h4>
+          <h5 class="">Has the pandemic and the focus on the remote worker uncovered gaps in your Unified Communications approach?</h5>
+          <p class="mb-4">Please join us for a business discussion on Unified Communications and how our recent reliance on UC solutions has uncovered clear gaps in our technology priorities, strategies, tools. This webinar will be led by Nick Kolintzas, CTO, VOX Network Solutions. Mr. Kolintzas is a technology industry visionary and thought leader with over 20 years of experience helping business clients understand forward-looking technologies and how they apply to evolving business&nbsp;scenarios.</p>
+          <h5>Agenda</h5>
           <ul>
             <li>Welcome &amp; Introductions</li>
             <li>The Remote Worker Experience (Powered by UC)</li>
@@ -69,6 +60,10 @@
           </ul>
         </div>
         <div class="col-12 col-md-6">
+          <div class="form-header">
+            <h4>Register for the webinar</h4>
+            <p class="lead mb-0"><b>Date</b>: Tuesday, May 26, 2020<br><b>Time</b>: 11–12 AM Pacific</p>
+          </div>
           <form id="webinarForm">
             <div class="form-group">
               <label for="inputFirst">First Name <small>(required)</small></label>
@@ -96,6 +91,10 @@
       </div>
     </div>
   </section>
+
+  <div class="gray-bg">
+
+  </div>
 
   <section class="bg-blue text-white text-center" style="background: #0096bb url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 6rem 1rem">
     <div class="container">
