--- a/voxns/index.html
+++ b/voxns/index.html
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-light sticky-top">
     <div class="container">
       <div class="navbar-brand">VOX Network Solutions</div>
-      <div class="contact"><a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a></div>
+      <div class="contact"><a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i><span>&nbsp;&nbsp;877.869.8111</span></a></div>
     </div>
   </nav>
 
@@ -51,7 +51,7 @@
     </div>
   </section>
 
-  <section class="showcase">
+  <section class="showcase gray-bg">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -100,8 +100,8 @@
               <i class="fas fa-hand-holding-usd m-auto"></i>
             </div>
           </div>
-          <h5 class="mt-3">Cost Effective</h5>
-          <p class="mb-4">Moving your phone system to the cloud reduces total cost of ownership (TCO) and capital overlays for updates and capabilities and lowers maintenance and support costs. Simple monthly per-user licensing minimizes capital investment while supporting scalability.</p>
+          <h5 class="mt-3">Cost-Efficiency</h5>
+          <p class="mb-4">Moving your PBX to the cloud reduces capital overlays for updates and capabilities, maintenance and support costs, and total cost of ownership (TCO). VOX further reduces costs by embedding PSTN into a monthly per-user licensing model that also provides scalability and a single point-of-contact for your PBX network.</p>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto">
@@ -114,17 +114,17 @@
         </div>
       </div>
       <div class="row">
-          <p class="mt-4 mb-0 mx-auto"><a href="#connect" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</a></p>
+          <p class="mt-4 mb-0 mx-auto"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="bg-blue text-white text-center" style="background: #0096bb url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 6rem 1rem">
+  <section class="skyline text-white text-center" style="padding: 6rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
-          <h3 class="light">Let VOX deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the&nbsp;cloud</h3>
+          <h3>Let VOX deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the&nbsp;cloud</h3>
         </div>
       </div>
     </div>
@@ -138,7 +138,7 @@
           <p>We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p>Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
           <p>Webex Calling connects directly to broader Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), and to third-party PBXs.</p>
-          <p class="mt-5 mb-5"><a href="#connect" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</a></p>
+          <p class="mt-5 mb-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p>
         </div>
         <div class="mt-4 col-12 mb-3">
           <h3 class="hr"><span>Why Choose VOX?</span></h3>
@@ -173,12 +173,12 @@
         <div class="col-md-8 col-sm-12">
           <h3 class="light mb-4">What Our Customers Say About&nbsp;Us</h3>
           <p>“Cindy from VOX spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … VOX is lucky to have Cindy on their team!” —Ian Gwinn, UCSF</p>
-          <!-- <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p> -->
+          <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a VOX Expert Today!</button></p>
         </div>
       </div>
     </div>
   </section>
-
+<!--
   <section id="connect" class="ceiling-bg" style="padding: 6rem 1rem">
     <div class="container">
       <div class="row">
@@ -214,7 +214,7 @@
       </div>
     </div>
   </section>
-
+-->
   <footer class="footer">
     <div class="container">
       <div class="row">
