--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
 
-  <header class="bg-blue text-white" style="padding: 4rem 1rem 1rem">
+  <header class="skyline text-white" style="padding: 4rem 1rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
@@ -38,7 +38,7 @@
     </div>
   </header>
 
-  <section class="ceiling-bg" style="padding: 3em 1rem 6rem">
+  <section class="ceiling-bg" style="padding: 3em 1rem">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-6 hide-sm">
@@ -85,22 +85,18 @@
               <label for="inputPhone">Phone Number</label>
               <input type="tel" class="form-control" id="inputPhone" placeholder="___–___–____" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
             </div>
-            <button type="submit" class="btn btn-block btn-warning mt-4">Submit</button>
+            <button type="submit" class="btn btn-block btn-lg btn-warning mt-4">Reserve my spot!</button>
           </form>
         </div>
       </div>
     </div>
   </section>
 
-  <div class="gray-bg">
-
-  </div>
-
-  <section class="bg-blue text-white text-center" style="background: #0096bb url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 6rem 1rem">
+  <section class="gray-bg" style="padding:3rem 0 6rem">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-sm-12 mx-auto">
-          <h3 class="light">Let VOX deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the&nbsp;cloud</h3>
+        <div class="col-12 text-center">
+          <h3>Presenters</h3>
         </div>
       </div>
     </div>
