webinar co-branding

--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -20,18 +20,18 @@
 
 <body>
 
-  <nav class="navbar navbar-light sticky-top">
+<!--   <nav class="navbar navbar-light sticky-top">
     <div class="container">
       <div class="navbar-brand">VOX Network Solutions</div>
       <div class="contact"><a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a></div>
     </div>
-  </nav>
+  </nav> -->
 
-  <header class="skyline text-white" style="padding: 4rem 1rem 1rem">
+  <header class="skyline text-white" style="padding: 6rem 1rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
-          <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
+          <img style="margin-left:-15px" src="img/vox-cisco.png" height="60">
           <h3 class="mt-3">Webinar<span class="light"> // Rethinking Unified Communications from Our “New Normal” Experiences</span></h3>
         </div>
       </div>
