--- a/voxns/index.html
+++ b/voxns/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-8 col-sm-10 col-12">
-          <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
+          <img class="o6" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
           <h2 class="mt-3 mb-4">Webex Calling with&nbsp;VOX</h2>
           <div class="video-container">
             <iframe class="video" src="https://www.youtube.com/embed/lalnDTskMfU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
