--- a/voxns/index.html
+++ b/voxns/index.html
@@ -51,7 +51,7 @@
     </div>
   </section>
 
-  <section class="showcase gray-bg">
+  <section class="showcase bg-gray">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -120,7 +120,7 @@
     </div>
   </section>
 
-  <section class="skyline text-white text-center" style="padding: 6rem 1rem">
+  <section class="bg-skyline text-white text-center" style="padding: 6rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
