--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -27,7 +27,7 @@
     </div>
   </nav> -->
 
-  <header class="skyline text-white" style="padding: 6rem 1rem 1rem">
+  <header class="bg-skyline text-white" style="padding: 6rem 1rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
@@ -38,10 +38,10 @@
     </div>
   </header>
 
-  <section class="ceiling-bg" style="padding: 3em 1rem">
+  <section class="bg-ceiling" style="padding: 3em 1rem">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-6 hide-sm">
+        <div class="col-12 col-md-6">
           <h5 class="">Has the pandemic and the focus on the remote worker uncovered gaps in your Unified Communications approach?</h5>
           <p class="mb-4">Please join us for a business discussion on Unified Communications and how our recent reliance on UC solutions has uncovered clear gaps in our technology priorities, strategies, tools. This webinar will be led by Nick Kolintzas, CTO, VOX Network Solutions. Mr. Kolintzas is a technology industry visionary and thought leader with over 20 years of experience helping business clients understand forward-looking technologies and how they apply to evolving business&nbsp;scenarios.</p>
           <h5>Agenda</h5>
@@ -56,7 +56,7 @@
               <li>Flexible Licensing to empower business change</li>
             </ol>
             <li>Virtual Tour of Cisco Webex Calling</li>
-            <li>Q & A</li>
+            <li>Q &amp; A</li>
           </ul>
         </div>
         <div class="col-12 col-md-6">
@@ -92,11 +92,44 @@
     </div>
   </section>
 
-  <section class="gray-bg" style="padding:3rem 0 6rem">
+  <section class="presenters text-center text-white bg-skyline" style="padding:3rem 1rem">
+    <div class="container">
+      <h3 class="mb-4">Presenters</h3>
+      <div class="row col-12 col-lg-9 mx-auto">
+        <div class="col-sm-6">
+          <div class="presenter-item mx-auto">
+            <img class="img-fluid rounded-circle mb-3" src="img/nick.jpg" alt="">
+            <h4 class="mb-1">Nick Kolintzas</h4>
+            <p>CTO, VOX</p>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="presenter-item mx-auto">
+            <img class="img-fluid rounded-circle mb-3" src="img/kelly.jpg" alt="">
+            <h4 class="mb-1">Kelly Clair</h4>
+            <p>Systems Engineer, Cisco</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="bg-gray" style="padding: 3em 1rem 6rem">
     <div class="container">
       <div class="row">
-        <div class="col-12 text-center">
-          <h3>Presenters</h3>
+        <div class="col-12 col-md-6">
+          <h5 class="">What the Spotlight has Uncovered</h5>
+          <p class="mb-4">The impact of the current pandemic has put an incredibly bright spotlight on remote working and the enabling technologies.  Unified Communications is at the center of it all, and for the past six weeks or so, we have experienced how our technologies and strategies have been successful, and where we have some more work to do.  While each organization is unique, common themes for newly discovered concerns,&nbsp;include:</p>
+          <ul>
+            <li>Security of Remote Communications</li>
+            <li>Integration of UC tools</li>
+            <li>Rapid Provisioning to enable workforce volatility</li>
+            <li>Flexible Licensing to empower business change</li>
+          </ul>
+        </div>
+        <div class="col-12 col-md-6">
+          <h5 class="">UC Today &amp; Tomorrow</h5>
+          <p class="mb-4">Unified communications (UC) solutions help people work together more effectively, anywhere, on any device. They bring real-time communication from your phone system and conferencing solutions together with messaging, chat and team collaboration to boost productivity and enable more meaningful interactions.  Advancements in UC have largely come in three areas:  pervasive integration for a more seamless experience, stronger security for users and information, and improved utilization of the power of the&nbsp;Cloud.</p>
         </div>
       </div>
     </div>
