--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-6">
-          <h5 class="">Has the pandemic and the focus on the remote worker uncovered gaps in your Unified Communications approach?</h5>
+          <h5>Has the pandemic and the focus on the remote worker uncovered gaps in your Unified Communications approach?</h5>
           <p class="mb-4">Please join us for a business discussion on Unified Communications and how our recent reliance on UC solutions has uncovered clear gaps in our technology priorities, strategies, tools. This webinar will be led by Nick Kolintzas, CTO, VOX Network Solutions. Mr. Kolintzas is a technology industry visionary and thought leader with over 20 years of experience helping business clients understand forward-looking technologies and how they apply to evolving business&nbsp;scenarios.</p>
           <h5>Agenda</h5>
           <ul>
@@ -114,13 +114,13 @@
     </div>
   </section>
 
-  <section class="bg-gray" style="padding: 3em 1rem 6rem">
+  <section class="bg-gray" style="padding: 3em 1rem 5rem">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-6">
-          <h5 class="">What the Spotlight has Uncovered</h5>
-          <p class="mb-4">The impact of the current pandemic has put an incredibly bright spotlight on remote working and the enabling technologies.  Unified Communications is at the center of it all, and for the past six weeks or so, we have experienced how our technologies and strategies have been successful, and where we have some more work to do.  While each organization is unique, common themes for newly discovered concerns,&nbsp;include:</p>
-          <ul>
+          <h5>What the Spotlight has Uncovered</h5>
+          <p class="mb-2">The impact of the current pandemic has put an incredibly bright spotlight on remote working and the enabling technologies.  Unified Communications is at the center of it all, and for the past six weeks or so, we have experienced how our technologies and strategies have been successful, and where we have some more work to do.  While each organization is unique, common themes for newly discovered concerns,&nbsp;include:</p>
+          <ul class="mb-4">
             <li>Security of Remote Communications</li>
             <li>Integration of UC tools</li>
             <li>Rapid Provisioning to enable workforce volatility</li>
@@ -128,7 +128,7 @@
           </ul>
         </div>
         <div class="col-12 col-md-6">
-          <h5 class="">UC Today &amp; Tomorrow</h5>
+          <h5>UC Today &amp; Tomorrow</h5>
           <p class="mb-4">Unified communications (UC) solutions help people work together more effectively, anywhere, on any device. They bring real-time communication from your phone system and conferencing solutions together with messaging, chat and team collaboration to boost productivity and enable more meaningful interactions.  Advancements in UC have largely come in three areas:  pervasive integration for a more seamless experience, stronger security for users and information, and improved utilization of the power of the&nbsp;Cloud.</p>
         </div>
       </div>
