--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -100,14 +100,14 @@
           <div class="presenter-item mx-auto">
             <img class="img-fluid rounded-circle mb-3" src="img/nick.jpg" alt="">
             <h4 class="mb-1">Nick Kolintzas</h4>
-            <p>CTO, VOX</p>
+            <p>CTO, VOX Network Solutions</p>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="presenter-item mx-auto">
             <img class="img-fluid rounded-circle mb-3" src="img/kelly.jpg" alt="">
             <h4 class="mb-1">Kelly Clair</h4>
-            <p>Systems Engineer, Cisco</p>
+            <p>Technical Services Specialist, Cisco</p>
           </div>
         </div>
       </div>
@@ -118,6 +118,10 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-6">
+          <h5>UC Today &amp; Tomorrow</h5>
+          <p class="mb-4">Unified communications (UC) solutions help people work together more effectively, anywhere, on any device. They bring real-time communication from your phone system and conferencing solutions together with messaging, chat and team collaboration to boost productivity and enable more meaningful interactions.  Advancements in UC have largely come in three areas:  pervasive integration for a more seamless experience, stronger security for users and information, and improved utilization of the power of the&nbsp;Cloud.</p>
+        </div>
+        <div class="col-12 col-md-6">
           <h5>What the Spotlight has Uncovered</h5>
           <p class="mb-2">The impact of the current pandemic has put an incredibly bright spotlight on remote working and the enabling technologies.  Unified Communications is at the center of it all, and for the past six weeks or so, we have experienced how our technologies and strategies have been successful, and where we have some more work to do.  While each organization is unique, common themes for newly discovered concerns,&nbsp;include:</p>
           <ul class="mb-4">
@@ -126,10 +130,6 @@
             <li>Rapid Provisioning to enable workforce volatility</li>
             <li>Flexible Licensing to empower business change</li>
           </ul>
-        </div>
-        <div class="col-12 col-md-6">
-          <h5>UC Today &amp; Tomorrow</h5>
-          <p class="mb-4">Unified communications (UC) solutions help people work together more effectively, anywhere, on any device. They bring real-time communication from your phone system and conferencing solutions together with messaging, chat and team collaboration to boost productivity and enable more meaningful interactions.  Advancements in UC have largely come in three areas:  pervasive integration for a more seamless experience, stronger security for users and information, and improved utilization of the power of the&nbsp;Cloud.</p>
         </div>
       </div>
     </div>
