--- a/voxns/index-alpha.html
+++ b/voxns/index-alpha.html
@@ -19,7 +19,7 @@
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template -->
-  <link href="css/landing-page-alpha.css" rel="stylesheet">
+  <link href="css/landing-alpha.css" rel="stylesheet">
 
 </head>
 
