--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -14,20 +14,13 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-  <link href="css/landing-page.css" rel="stylesheet">
+  <link href="css/landing.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-<!--   <nav class="navbar navbar-light sticky-top">
-    <div class="container">
-      <div class="navbar-brand">VOX Network Solutions</div>
-      <div class="contact"><a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a></div>
-    </div>
-  </nav> -->
-
-  <header class="bg-skyline text-white" style="padding: 6rem 1rem 1rem">
+  <header class="bg-blue skyline">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
@@ -38,7 +31,7 @@
     </div>
   </header>
 
-  <section class="bg-ceiling" style="padding: 3em 1rem">
+  <section class="ceiling py-5">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-6">
@@ -85,14 +78,14 @@
               <label for="inputPhone">Phone Number</label>
               <input type="tel" class="form-control" id="inputPhone" placeholder="___–___–____" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
             </div>
-            <button type="submit" class="btn btn-block btn-lg btn-warning mt-4">Reserve my spot!</button>
+            <button type="submit" class="btn btn-caps btn-block btn-warning mt-4">Reserve my spot</button>
           </form>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="presenters text-center text-white bg-skyline" style="padding:3rem 1rem">
+  <section class="bg-blue skyline text-center py-5">
     <div class="container">
       <h3 class="mb-4">Presenters</h3>
       <div class="row col-12 col-lg-9 mx-auto">
@@ -100,7 +93,7 @@
           <div class="presenter-item mx-auto">
             <img class="img-fluid rounded-circle mb-3" src="img/nick.jpg" alt="">
             <h4 class="mb-1">Nick Kolintzas</h4>
-            <p>CTO, VOX Network Solutions</p>
+            <p class="mb-4">CTO, VOX Network Solutions</p>
           </div>
         </div>
         <div class="col-sm-6">
@@ -114,7 +107,7 @@
     </div>
   </section>
 
-  <section class="bg-gray" style="padding: 3em 1rem 5rem">
+  <section class="bg-gray py-5">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-6">
