--- a/voxns/index.html
+++ b/voxns/index.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-  <link href="css/landing-page.css" rel="stylesheet">
+  <link href="css/landing.css" rel="stylesheet">
 
 </head>
 
@@ -27,7 +27,7 @@
     </div>
   </nav>
 
-  <header class="masthead text-white">
+  <header class="bg-blue masthead" style="padding:4rem 1rem 0">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-8 col-sm-10 col-12">
@@ -41,7 +41,7 @@
     </div>
   </header>
 
-  <section style="padding: 6rem 1rem 3rem">
+  <section class="pb-5">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
@@ -51,7 +51,7 @@
     </div>
   </section>
 
-  <section class="showcase bg-gray">
+  <section class="showcase bg-gray py-5">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -82,7 +82,7 @@
     </div>
   </section>
 
-  <section style="padding: 4rem 1rem 6rem">
+  <section class="pt-5">
     <div class="container">
       <div class="row features-icons">
         <div class="col-lg-4">
@@ -120,7 +120,7 @@
     </div>
   </section>
 
-  <section class="bg-skyline text-white text-center" style="padding: 6rem 1rem">
+  <section class="bg-blue skyline text-center">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
@@ -130,7 +130,7 @@
     </div>
   </section>
 
-  <section class="already" style="padding: 6rem 1rem 5rem">
+  <section class="already">
     <div class="container">
       <div class="row">
         <div class="col-lg-7 col-md-8 col-sm-12">
@@ -167,7 +167,7 @@
     </div>
   </section>
 
-  <section class="testimonial text-white" style="padding: 6rem 1rem">
+  <section class="bg-blue happy" style="padding: 6rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
