--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -53,7 +53,7 @@
           </ul>
         </div>
         <div class="col-12 col-md-6">
-          <div class="form-header">
+          <div class="form-header ceiling">
             <h4>Register for the webinar</h4>
             <p class="lead mb-0"><b>Date</b>: Tuesday, May 26, 2020<br><b>Time</b>: 11–12 AM Pacific</p>
           </div>
@@ -91,14 +91,14 @@
       <div class="row col-12 col-lg-9 mx-auto">
         <div class="col-sm-6">
           <div class="presenter-item mx-auto">
-            <img class="img-fluid rounded-circle mb-3" src="img/nick.jpg" alt="">
+            <img class="headshot img-fluid rounded-circle mb-3" src="img/presenter-nick.jpg" alt="">
             <h4 class="mb-1">Nick Kolintzas</h4>
             <p class="mb-4">CTO, VOX Network Solutions</p>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="presenter-item mx-auto">
-            <img class="img-fluid rounded-circle mb-3" src="img/kelly.jpg" alt="">
+            <img class="headshot img-fluid rounded-circle mb-3" src="img/presenter-kelly.jpg" alt="">
             <h4 class="mb-1">Kelly Clair</h4>
             <p>Technical Services Specialist, Cisco</p>
           </div>
