--- a/voxns/index.html
+++ b/voxns/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <nav class="navbar navbar-light sticky-top">
+  <nav class="navbar sticky-top">
     <div class="container">
       <div class="navbar-brand">VOX Network Solutions</div>
       <div class="contact"><a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i><span>&nbsp;&nbsp;877.869.8111</span></a></div>
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase0.jpg')"></div>
+        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase1.jpg')"></div>
         <div class="col-md-6 my-auto showcase-text">
           <h5>Deliver a Unified User Experience Across All Devices and&nbsp;Locations</h5>
           <p class="mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of where they are located and what device they are&nbsp;using.</p>
@@ -154,12 +154,12 @@
           <p class="mb-4">We use our proprietary VOX Lifecycle consultative framework to find the right technology fit for your unique business needs and desired outcomes.</p>
         </div>
         <div class="col-lg-4">
-          <img src="img/business.jpg" alt="" style="width:100%">
+          <img src="img/why-business.jpg" alt="" style="width:100%">
           <h5 class="mt-3">Focused on Your Business’s Evolution</h5>
           <p class="mb-4">We ensure that your Webex Calling investment can expand and adapt as your company grows and changes.</p>
         </div>
         <div class="col-lg-4">
-          <img src="img/collab.jpg" alt="" style="width:100%">
+          <img src="img/why-collab.jpg" alt="" style="width:100%">
           <h5 class="mt-3">Business &amp; Technical Collaboration Expertise</h5>
           <p class="mb-4">We bring deep unified communications and collaboration expertise to the table, from both business and technical perspectives.</p>
         </div>
@@ -167,7 +167,7 @@
     </div>
   </section>
 
-  <section class="bg-blue happy" style="padding: 6rem 1rem">
+  <section class="bg-blue happy">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
@@ -178,43 +178,7 @@
       </div>
     </div>
   </section>
-<!--
-  <section id="connect" class="ceiling-bg" style="padding: 6rem 1rem">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-6 hide-sm">
-          <h3>Connect with a VOX Expert</h3>
-          <p class="lead">We can help you strategize and execute your Cloud Migration.</p>
-        </div>
-        <div class="col-12 col-md-6">
-          <form id="connectForm">
-            <div class="form-group">
-              <label for="inputFirst">First Name <small>(required)</small></label>
-              <input type="text" class="form-control" id="inputFirst" required>
-            </div>
-            <div class="form-group">
-              <label for="inputLast">Last Name <small>(required)</small></label>
-              <input type="text" class="form-control" id="inputLast" required>
-            </div>
-            <div class="form-group">
-              <label for="inputEmail">Email <small>(required)</small></label>
-              <input type="email" class="form-control" id="inputEmail" required>
-            </div>
-            <div class="form-group">
-              <label for="inputCompany">Company <small>(required)</small></label>
-              <input type="text" class="form-control" id="inputCompany" required>
-            </div>
-            <div class="form-group">
-              <label for="inputPhone">Phone Number</label>
-              <input type="tel" class="form-control" id="inputPhone" placeholder="___–___–____" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
-            </div>
-            <button type="submit" class="btn btn-block btn-warning mt-4">Submit</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
--->
+
   <footer class="footer">
     <div class="container">
       <div class="row">
