"Reserve My Spot"

--- a/voxns/index.html
+++ b/voxns/index.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
 
-  <header class="bg-blue masthead" style="padding:4rem 1rem 0">
+  <header class="bg-blue masthead">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-8 col-sm-10 col-12">
