--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -78,7 +78,7 @@
               <label for="inputPhone">Phone Number</label>
               <input type="tel" class="form-control" id="inputPhone" placeholder="___–___–____" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
             </div>
-            <button type="submit" class="btn btn-caps btn-block btn-warning mt-4">Reserve my spot</button>
+            <button type="submit" class="btn btn-lg btn-block btn-warning mt-4">Reserve My Spot!</button>
           </form>
         </div>
       </div>
