--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -36,7 +36,7 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <h5>Has the pandemic and the focus on the remote worker uncovered gaps in your Unified Communications approach?</h5>
-          <p class="mb-4">Please join us for a business discussion on Unified Communications and how our recent reliance on UC solutions has uncovered clear gaps in our technology priorities, strategies, tools. This webinar will be led by Nick Kolintzas, CTO, VOX Network Solutions. Mr. Kolintzas is a technology industry visionary and thought leader with over 20 years of experience helping business clients understand forward-looking technologies and how they apply to evolving business&nbsp;scenarios.</p>
+          <p class="mb-4">Join us for a business discussion on Unified Communications and how our recent reliance on UC solutions has uncovered clear gaps in our technology priorities, strategies, tools. This webinar will be led by Nick Kolintzas, CTO, VOX Network Solutions. Mr. Kolintzas is a technology industry visionary and thought leader with over 20 years of experience helping business clients understand forward-looking technologies and how they apply to evolving business&nbsp;scenarios.</p>
           <h5>Agenda</h5>
           <ul class="mb-4">
             <li>Welcome &amp; Introductions</li>
