--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -13,7 +13,6 @@
 
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
   <link href="css/landing.css" rel="stylesheet">
 
 </head>
@@ -24,7 +23,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
-          <img style="margin-left:-15px" src="img/vox-cisco.png" height="60">
+          <img style="margin-left:-15px" src="img-webinar/vox-cisco.png" height="60">
           <h3 class="mt-3">Webinar<span class="light"> // Rethinking Unified Communications from Our “New Normal” Experiences</span></h3>
         </div>
       </div>
@@ -91,14 +90,14 @@
       <div class="row col-12 col-lg-9 mx-auto">
         <div class="col-sm-6">
           <div class="presenter-item mx-auto">
-            <img class="headshot img-fluid rounded-circle mb-3" src="img/presenter-nick.jpg" alt="">
+            <img class="headshot img-fluid rounded-circle mb-3" src="img-webinar/headshot-nkolintzas.jpg" alt="">
             <h4 class="mb-1">Nick Kolintzas</h4>
             <p class="mb-4">CTO, VOX Network Solutions</p>
           </div>
         </div>
         <div class="col-sm-6">
           <div class="presenter-item mx-auto">
-            <img class="headshot img-fluid rounded-circle mb-3" src="img/presenter-kelly.jpg" alt="">
+            <img class="headshot img-fluid rounded-circle mb-3" src="img-webinar/headshot-kclair.jpg" alt="">
             <h4 class="mb-1">Kelly Clair</h4>
             <p>Technical Services Specialist, Cisco</p>
           </div>
