--- a/voxns/index.html
+++ b/voxns/index.html
@@ -13,7 +13,7 @@
 
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="css/landing.css" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
 
 </head>
 
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-8 col-sm-10 col-12">
-          <img class="o6" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
+          <img class="o6" src="img-landing/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
           <h2 class="mt-3 mb-4">Webex Calling with&nbsp;VOX</h2>
           <div class="video-container">
             <iframe class="video" src="https://www.youtube.com/embed/lalnDTskMfU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -58,21 +58,21 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase1.jpg')"></div>
+        <div class="col-md-6 text-white showcase-img" style="background-image: url('img-landing/showcase1.jpg')"></div>
         <div class="col-md-6 my-auto showcase-text">
           <h5>Deliver a Unified User Experience Across All Devices and&nbsp;Locations</h5>
           <p class="mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of where they are located and what device they are&nbsp;using.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 order-md-2 text-white showcase-img" style="background-image: url('img/showcase2.jpg')"></div>
+        <div class="col-md-6 order-md-2 text-white showcase-img" style="background-image: url('img-landing/showcase2.jpg')"></div>
         <div class="col-md-6 order-md-1 my-auto showcase-text text-right">
           <h5>Unlock the Collaborative Potential of Your&nbsp;Teams</h5>
           <p class="mb-0">Webex Calling includes Webex Teams and Webex Meetings with features such as file-sharing, white boarding, video and web conferencing. Use these tools on desktops and mobile devices to empower your teams to be more productive, from&nbsp;anywhere.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase3.jpg')"></div>
+        <div class="col-md-6 text-white showcase-img" style="background-image: url('img-landing/showcase3.jpg')"></div>
         <div class="col-md-6 my-auto showcase-text">
           <h5>Delight Your IT Team with Easy Centralized Management</h5>
           <p class="mb-0">All calling and collaboration services are integrated in the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
@@ -146,19 +146,19 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="video-container">
-            <a class="video-overlay" href="#"></a>
+            <a class="video-overlay" href="#"><img src="img-landing/video-overlay.jpg"></a>
             <iframe class="video" src="https://www.youtube.com/embed/MbvtjK7nkW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <h5 class="mt-3">Unique Consultative Approach</h5>
           <p class="mb-4">We use our proprietary VOX Lifecycle consultative framework to find the right technology fit for your unique business needs and desired outcomes.</p>
         </div>
         <div class="col-lg-4">
-          <img src="img/why-business.jpg" alt="" style="width:100%">
+          <img src="img-landing/why-business.jpg" alt="" style="width:100%">
           <h5 class="mt-3">Focused on Your Business’s Evolution</h5>
           <p class="mb-4">We ensure that your Webex Calling investment can expand and adapt as your company grows and changes.</p>
         </div>
         <div class="col-lg-4">
-          <img src="img/why-collab.jpg" alt="" style="width:100%">
+          <img src="img-landing/why-collab.jpg" alt="" style="width:100%">
           <h5 class="mt-3">Business &amp; Technical Collaboration Expertise</h5>
           <p class="mb-4">We bring deep unified communications and collaboration expertise to the table, from both business and technical perspectives.</p>
         </div>
