--- a/voxns/webinar.html
+++ b/voxns/webinar.html
@@ -13,7 +13,7 @@
 
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="css/landing.css" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
 
 </head>
 
