--- a/games.owned.html
+++ b/games.owned.html
@@ -189,6 +189,7 @@ Uncharted: The Nathan Drake Collection $8
 [3V] CastleStorm
 [3] The Cave
 [3] Chariot
+[4] Cities: Skylines
 [4V] Claire: Extended Cut
 [3] Closure
 [3] Cloudberry Kingdom
@@ -249,6 +250,7 @@ Uncharted: The Nathan Drake Collection $8
 [V] Exile's End
 [43] Extreme Exorcism
 [4V] Fallen Legion: Flames of Rebellion
+[4] Farming Simulator 19
 [3] Fat Princess
 [43V] Fez
 [V] Final Horizon
