--- a/games.owned.html
+++ b/games.owned.html
@@ -183,6 +183,7 @@ Uncharted: The Nathan Drake Collection $8
 [4V] Burly Men at Sea
 [4] Call of Duty: Black Ops III
 [4] Call of Duty: Modern Warfare Remastered
+[4] Call of Duty: WWII
 [3] Call of Juarez: Bound in Blood
 [3] Call of Juarez: Gunslinger
 [3] Castle of Illusion Starring Mickey Mouse
@@ -463,6 +464,7 @@ Resident Evil: Chronicles HD Collection
 [4V] Spy Chameleon
 [V] Squares
 [3] SSX
+[4] Star Wars Battlefront II
 [3V] Stealth Inc: A Clone in the Dark
 [43V] Stealth Inc 2: A Game of Clones
 [4] Steep
