--- a/games.owned.html
+++ b/games.owned.html
@@ -119,6 +119,7 @@ Prince of Persia Trilogy $8
 [4] Tacoma $10
 [4] Tales from the Borderlands $4
 [3] Tales of Monkey Island $1
+[V] Tearaway $20
 [3] Terraria $4
 [43V] Thomas Was Alone $3
 [V] Three Fourths Home $2
