--- a/games.owned.vita.html
+++ b/games.owned.vita.html
@@ -46,6 +46,7 @@ P3D & P5D Bundle $46
 [43V] Spelunky $4
 [V] Steins;Gate $3
 [3V] Stick It to the Man $6
+[V] Tearaway $20
 [43V] Thomas Was Alone $3
 [V] Three Fourths Home $2
 [43V] The Unfinished Swan $4
