--- a/games.owned.html
+++ b/games.owned.html
@@ -140,7 +140,7 @@ Uncharted: The Nathan Drake Collection $8
 [V] Zero Escape: Zero Time Dilemma $12
 </pre></div>
 
-<div id="plus"><header><b>PS+</b></header><pre>
+<div id="plus"><header><b>Plus</b> <span>(2013–20)</span></header><pre>
 [4V] 10 Second Ninja X
 [43V] 99Vidas
 [43] Aaru's Awakening
@@ -552,6 +552,14 @@ Resident Evil: Chronicles HD Collection
 [3] Zombie Driver HD
 [3V] Zombie Tycoon 2: Brainhov's Revenge
 [3] Zone of the Enders HD Collection
+</pre></div>
+
+<div id="plus2"><header><b>Plus</b> <span>(2021-22)</span></header><pre>
+[5] Destruction AllStars
+[4] Farpoint
+[4] Final Fantasy VII Remake
+[5] Maquette
+[4] Remnant: From the Ashes
 </pre></div>
 
 <script>
