--- a/games.owned.vita.html
+++ b/games.owned.vita.html
@@ -54,7 +54,7 @@ P3D & P5D Bundle $46
 [V] Zero Escape: Zero Time Dilemma $12
 </pre></div>
 
-<div id="plus"><header><b>PS+</b></header><pre>
+<div id="plus"><header><b>Plus</b> <span>(2013–20)</span></header><pre>
 [4V] 10 Second Ninja X
 [43V] 99Vidas
 [V] Amnesia: Memories
